callmeback/kubernetes/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmb-mongo-service
  labels:
    app: call-me-back
spec:
  ports:
    - port: 27017
  selector:
    app: call-me-back
    tier: mongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmb-mongo
  labels:
    app: call-me-back
spec:
  selector:
    matchLabels:
      app: call-me-back
      tier: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: call-me-back
        tier: mongo
    spec:
      containers:
        - image: mongo:4.2.6
          name: cmb-mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: cmb-mongo-pv-claim
