callmeback/kubernetes/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmb-web-service
  labels:
    app: call-me-back
spec:
  ports:
    - port: 8080
  selector:
    app: call-me-back
    tier: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmb-web
  labels:
    app: call-me-back
spec:
  selector:
    matchLabels:
      app: call-me-back
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: call-me-back
        tier: web
    spec:
      containers:
        - image: google-org/call-me-back:dev
          name: cmb-web
          ports:
            - containerPort: 8080
              name: web
